--- a/index.html
+++ b/index.html
@@ -3,90 +3,92 @@
 
 <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no" />
-    <title>Clicker Pro</title>
-    <!-- Google Fonts for a nicer, modern font -->
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover, user-scalable=no" />
+    <title>Coin Clicker</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@500;600;700;800&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css" />
     <script src="https://telegram.org/js/telegram-web-app.js"></script>
 </head>
 
 <body>
     <div id="app">
+        <!-- Main Application Content Area -->
         <div class="app-content">
-            <!-- Main Clicker Page -->
-            <section id="main" class="page active">
-                <div class="main-header">
-                    <div class="stats-group">
-                        <div class="stat-item">
-                            <span class="stat-label">Coins / Sec</span>
-                            <span id="coinsPerSec" class="stat-value">0</span>
-                        </div>
-                        <div class="stat-item">
-                            <span class="stat-label">Coins / Click</span>
-                            <span id="coinsPerClick" class="stat-value">1</span>
-                        </div>
+
+            <!-- This container will hold the dynamically shown page -->
+            <div id="page-container">
+
+                <!-- Main Clicker Page (Initially visible) -->
+                <section id="main" class="page active">
+                    <div class="main-header">
+                        <h2>Coin Clicker</h2>
                     </div>
                     <div class="total-coins-container">
                         <img src="https://i.imgur.com/8x5xG4i.png" alt="Coin" class="coin-icon">
                         <span id="coins" class="total-coins-value">0</span>
                     </div>
-                </div>
-
-                <div class="clicker-zone">
-                    <div id="clickImage" class="click-image">
-                        <!-- The character image will be set via CSS -->
+                    <div class="stats-group">
+                        <div class="stat-item">
+                            <span class="stat-label">per click</span>
+                            <span id="coinsPerClick" class="stat-value">1</span>
+                        </div>
+                        <div class="stat-item">
+                            <span class="stat-label">per second</span>
+                            <span id="coinsPerSec" class="stat-value">0</span>
+                        </div>
                     </div>
-                    <div id="floating-coins-container"></div>
-                </div>
-            </section>
-
-            <!-- Top Players Page -->
-            <section id="top" class="page">
-                <h1 class="page-title">🏆 Top Players</h1>
-                <ol id="topList" class="leaderboard-list"></ol>
-            </section>
-
-            <!-- Upgrades Page -->
-            <section id="upgrade" class="page">
-                <h1 class="page-title">⚙️ Upgrades</h1>
-                <div class="upgrade-section">
-                    <h3>Click Power</h3>
-                    <div class="upgrade-info">
-                        <div class="upgrade-level">Level: <span id="upgradeClickLevel">0</span></div>
-                        <div class="upgrade-cost">Cost: <span id="upgradeClickCost">10</span> 🪙</div>
+                    <div class="clicker-zone">
+                        <div id="clickImage" class="click-image"></div>
+                        <div id="floating-text-container"></div>
                     </div>
-                    <button id="upgradeClickBtn" class="upgrade-btn">Upgrade</button>
-                </div>
+                </section>
 
-                <div class="upgrade-section">
-                    <h3>Auto Income</h3>
-                    <div class="upgrade-info">
-                        <div class="upgrade-level">Level: <span id="upgradeAutoLevel">0</span></div>
-                        <div class="upgrade-cost">Cost: <span id="upgradeAutoCost">20</span> 🪙</div>
+                <!-- Upgrades Page -->
+                <section id="upgrade" class="page">
+                    <h1 class="page-title">⚙️ Upgrades</h1>
+                    <div class="upgrade-section">
+                        <h3>Click Power</h3>
+                        <div class="upgrade-info">
+                            <div class="upgrade-level">Level: <span id="upgradeClickLevel">0</span></div>
+                            <div class="upgrade-cost">Cost: <span id="upgradeClickCost">10</span> 🪙</div>
+                        </div>
+                        <button id="upgradeClickBtn" class="upgrade-btn">Upgrade</button>
                     </div>
-                    <button id="upgradeAutoBtn" class="upgrade-btn">Upgrade</button>
-                </div>
-            </section>
+                    <div class="upgrade-section">
+                        <h3>Auto Income</h3>
+                        <div class="upgrade-info">
+                            <div class="upgrade-level">Level: <span id="upgradeAutoLevel">0</span></div>
+                            <div class="upgrade-cost">Cost: <span id="upgradeAutoCost">20</span> 🪙</div>
+                        </div>
+                        <button id="upgradeAutoBtn" class="upgrade-btn">Upgrade</button>
+                    </div>
+                </section>
 
-            <!-- Transfer Page -->
-            <section id="transfer" class="page">
-                <h1 class="page-title">💸 Transfer Coins</h1>
-                <div class="transfer-form">
-                    <div class="input-group">
-                        <label for="transferUsername">Recipient's Username</label>
-                        <input id="transferUsername" type="text" placeholder="@username" />
+                <!-- Top Players Page -->
+                <section id="top" class="page">
+                    <h1 class="page-title">🏆 Top Players</h1>
+                    <ol id="topList" class="leaderboard-list"></ol>
+                </section>
+
+                <!-- Transfer Page -->
+                <section id="transfer" class="page">
+                    <h1 class="page-title">💸 Transfer Coins</h1>
+                    <div class="transfer-form">
+                        <div class="input-group">
+                            <label for="transferUsername">Recipient's Username</label>
+                            <input id="transferUsername" type="text" placeholder="@username" />
+                        </div>
+                        <div class="input-group">
+                            <label for="transferAmount">Amount to Send</label>
+                            <input id="transferAmount" type="number" placeholder="1000" min="1" />
+                        </div>
+                        <button id="transferBtn" class="transfer-btn">Send Coins</button>
+                        <p id="transferMessage" class="transfer-message"></p>
                     </div>
-                    <div class="input-group">
-                        <label for="transferAmount">Amount to Send</label>
-                        <input id="transferAmount" type="number" placeholder="1000" min="1" />
-                    </div>
-                    <button id="transferBtn" class="transfer-btn">Send Coins</button>
-                    <p id="transferMessage" class="transfer-message"></p>
-                </div>
-            </section>
+                </section>
+            </div>
         </div>
 
         <!-- Bottom Navigation -->
@@ -95,13 +97,13 @@
                 <span class="nav-icon">🖱️</span>
                 <span class="nav-text">Click</span>
             </button>
+            <button id="nav-upgrade" class="nav-btn">
+                <span class="nav-icon">⚡️</span>
+                <span class="nav-text">Upgrades</span>
+            </button>
             <button id="nav-top" class="nav-btn">
                 <span class="nav-icon">🏆</span>
                 <span class="nav-text">Top</span>
-            </button>
-            <button id="nav-upgrade" class="nav-btn">
-                <span class="nav-icon">⚙️</span>
-                <span class="nav-text">Upgrades</span>
             </button>
             <button id="nav-transfer" class="nav-btn">
                 <span class="nav-icon">💸</span>
@@ -111,8 +113,6 @@
 
         <div id="notificationContainer"></div>
     </div>
-
-    <!-- Your script.js is fine, no need to include supabase.js here anymore -->
     <script src="script.js"></script>
 </body>
 
