feat: redesign frontend UI

--- a/index.html
+++ b/index.html
@@ -26,7 +26,8 @@
                         <h2>Coin Clicker</h2>
                     </div>
                     <div class="total-coins-container">
-                        <img src="https://i.imgur.com/8x5xG4i.png" alt="Coin" class="coin-icon">
+                        <!-- Using a reliable, high-quality coin image -->
+                        <img src="https://i.imgur.com/f07aLd1.png" alt="Coin" class="coin-icon">
                         <span id="coins" class="total-coins-value">0</span>
                     </div>
                     <div class="stats-group">
@@ -54,7 +55,7 @@
                             <div class="upgrade-level">Level: <span id="upgradeClickLevel">0</span></div>
                             <div class="upgrade-cost">Cost: <span id="upgradeClickCost">10</span> 🪙</div>
                         </div>
-                        <button id="upgradeClickBtn" class="upgrade-btn">Upgrade</button>
+                        <button id="upgradeClickBtn" class="action-button">Upgrade</button>
                     </div>
                     <div class="upgrade-section">
                         <h3>Auto Income</h3>
@@ -62,7 +63,7 @@
                             <div class="upgrade-level">Level: <span id="upgradeAutoLevel">0</span></div>
                             <div class="upgrade-cost">Cost: <span id="upgradeAutoCost">20</span> 🪙</div>
                         </div>
-                        <button id="upgradeAutoBtn" class="upgrade-btn">Upgrade</button>
+                        <button id="upgradeAutoBtn" class="action-button">Upgrade</button>
                     </div>
                 </section>
 
@@ -84,7 +85,7 @@
                             <label for="transferAmount">Amount to Send</label>
                             <input id="transferAmount" type="number" placeholder="1000" min="1" />
                         </div>
-                        <button id="transferBtn" class="transfer-btn">Send Coins</button>
+                        <button id="transferBtn" class="action-button">Send Coins</button>
                         <p id="transferMessage" class="transfer-message"></p>
                     </div>
                 </section>
