feat: redesign frontend UI

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                     </div>
                     <div class="total-coins-container">
                         <!-- Using a reliable, high-quality coin image -->
-                        <img src="https://i.imgur.com/f07aLd1.png" alt="Coin" class="coin-icon">
+                        <img src="https://pngimg.com/d/coin_PNG36871.png" alt="Coin" class="coin-icon">
                         <span id="coins" class="total-coins-value">0</span>
                     </div>
                     <div class="stats-group">
