--- a/admin-panel.html
+++ b/admin-panel.html
@@ -158,9 +158,9 @@
     </div>
 
     <script>
-        const supabaseUrl = 'YOUR_SUPABASE_URL';
-        const supabaseKey = 'YOUR_SUPABASE_KEY';
-        const supabase = supabase.createClient(supabaseUrl, supabaseKey);
+    const supabaseUrl = '%VITE_SUPABASE_URL%';
+    const supabaseKey = '%VITE_SUPABASE_KEY%';
+    const supabase = supabase.createClient(supabaseUrl, supabaseKey);
 
 
         function openTab(evt, tabName) {
@@ -240,7 +240,7 @@
             });
         }
 
-        // Load logs
+
         async function loadLogs() {
             const logType = document.getElementById('logType').value;
             let tableName, columns;
@@ -352,7 +352,7 @@
             }
         }
 
-        // Initialize
+
         document.addEventListener('DOMContentLoaded', () => {
             loadUsers();
             loadLogs();
