--- a/index.html
+++ b/index.html
@@ -294,6 +294,25 @@
                     <p id="transferMessage" class="transfer-message"></p>
                 </div>
             </section>
+
+            <section id="images" class="page">
+                <h1 class="page-title">🎨 Coin Images</h1>
+                <div id="imagesContainer" class="skins-grid"></div>
+            </section>
+
+            <section id="achievements" class="page">
+                <h1 class="page-title">🏆 Tasks & Achievements</h1>
+                <div id="achievementsContainer" class="achievements-list"></div>
+            </section>
+
+            <section id="history" class="page">
+                <h1 class="page-title">📜 Transaction History</h1>
+                <div class="history-controls">
+                    <input type="text" id="history-search" placeholder="Filter by username...">
+                </div>
+                <ul id="history-list" class="history-list"></ul>
+            </section>
+
         </div>
     </div>
 
@@ -308,13 +327,17 @@
             <span class="nav-icon">⚡️</span>
             <span class="nav-text">Upgrades</span>
         </button>
-        <button id="nav-top" class="nav-btn">
-            <span class="nav-icon">🏆</span>
-            <span class="nav-text">Top</span>
+        <button id="nav-images" class="nav-btn">
+            <span class="nav-icon">🎨</span>
+            <span class="nav-text">Images</span>
         </button>
-        <button id="nav-transfer" class="nav-btn">
-            <span class="nav-icon">💸</span>
-            <span class="nav-text">Transfer</span>
+        <button id="nav-achievements" class="nav-btn">
+            <span class="nav-icon">🏆</span>
+            <span class="nav-text">Tasks</span>
+            </button>
+        <button id="nav-history" class="nav-btn">
+            <span class="nav-icon">📜</span>
+            <span class="nav-text">History</span>
         </button>
     </nav>
 
