--- a/index.html
+++ b/index.html
@@ -36,6 +36,11 @@
                         <div class="stat-item full-width"><span class="stat-label">offline bonus / hr</span><span id="offlineRate"
                                 class="stat-value">0</span></div>
                     </div>
+
+                    <div class="main-actions">
+                        <button id="goto-images-btn" class="main-action-btn">🎨 Images</button>
+                    </div>
+
                     <div class="clicker-zone">
                         <div id="clickImage" class="click-image"></div>
                     </div>
@@ -112,16 +117,11 @@
 
 
     <nav class="bottom-nav">
-        <button id="nav-upgrade" class="nav-btn"><span class="nav-icon">⚡️</span><span
-                class="nav-text">Upgrades</span></button>
+        <button id="nav-upgrade" class="nav-btn"><span class="nav-icon">⚡️</span><span class="nav-text">Upgrades</span></button>
         <button id="nav-tasks" class="nav-btn"><span class="nav-icon">🎯</span><span class="nav-text">Tasks</span></button>
-        <button id="nav-main" class="nav-btn active"><span class="nav-icon">🖱️</span><span
-                class="nav-text">Click</span></button>
-        <button id="nav-images" class="nav-btn"><span class="nav-icon">🖼️</span><span
-                class="nav-text">Images</span></button>
+        <button id="nav-main" class="nav-btn active"><span class="nav-icon">🖱️</span><span class="nav-text">Click</span></button>
         <button id="nav-top" class="nav-btn"><span class="nav-icon">🏆</span><span class="nav-text">Top</span></button>
-        <button id="nav-transfer" class="nav-btn"><span class="nav-icon">💸</span><span
-                class="nav-text">Transfer</span></button>
+        <button id="nav-transfer" class="nav-btn"><span class="nav-icon">💸</span><span class="nav-text">Wallet</span></button>
     </nav>
 
   
