--- a/index.html
+++ b/index.html
@@ -28,23 +28,11 @@
                     <span id="coins" class="total-coins-value">0.000000000</span>
                 </div>
 
-                <div class="stats-container">
-                    <div class="stat-box">
-                        <div class="stat-icon">🖱️</div>
-                        <span class="stat-value" id="coinsPerClick">0</span>
-                        <span class="stat-label">per click</span>
-                    </div>
-                    <div class="stat-box">
-                        <div class="stat-icon">⏱️</div>
-                        <span class="stat-value" id="coinsPerSec">0</span>
-                        <span class="stat-label">per second</span>
-                    </div>
-                    <div class="stat-box">
-                        <div class="stat-icon">💤</div>
-                        <span class="stat-value" id="offlineRate">0</span>
-                        <span class="stat-label">offline / hr</span>
-                    </div>
-                </div>
+            <div class="simple-stats">
+                <div class="simple-stat">🖱️ <span id="coinsPerClick">0</span>/click</div>
+                <div class="simple-stat">⏱️ <span id="coinsPerSec">0</span>/sec</div>
+                <div class="simple-stat">💤 <span id="offlineRate">0</span>/hr</div>
+            </div>
 
                 <div class="clicker-zone">
                     <div id="clickImage" class="click-image"></div>
