--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 
                     <div class="sub-stats-display">
                         <div class="sub-stat"><span id="coinsPerClick">0</span>/click</div>
-                        <div class="sub-stat">⏱<span id="coinsPerSec">0</span>/sec</div>
+                        <div class="sub-stat"><span id="coinsPerSec">0</span>/sec</div>
                     </div>
 
                 </div>
