--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                 </div>
     
                 <div id="clickImageGif" class="character-image-layer"
-                    style="background-image: url('https://i.gifer.com/4qGG.gif');">
+                    style="background-image: url('https://i.gifer.com/DnT.gif');">
                 </div>
     
             </div>
