--- a/index.html
+++ b/index.html
@@ -19,32 +19,34 @@
     <div id="app">
         <div class="app-content">
 
-        <section id="main" class="page active">
-            <div class="game-area">
-                <div class="character-background"
-                    style="background-image: url('https://rare-gallery.com/uploads/posts/1198203-anime-anime-girls-digital-art-artwork-2D-portrait-display.png');">
-                </div>
-        
-                <div class="stats-container">
-                    <div class="stats-header">
-                        <div class="stats-title">Si Si Coins</div>
-                        <div id="coins" class="total-coins">0.000000000</div>
+            <section id="main" class="page active">
+                <div class="game-area">
+                    <div class="character-background"
+                        style="background-image: url('https://rare-gallery.com/uploads/posts/1198203-anime-anime-girls-digital-art-artwork-2D-portrait-display.png');">
                     </div>
-                    <div class="stats-grid">
-                        <div class="stat-item">
-                            <div class="stat-label">PER CLICK</div>
-                            <div class="stat-value"><span id="coinsPerClick">0</span></div>
+
+                    <div id="clickImage" class="clickable-area"></div>
+
+                    <div class="stats-container">
+                        <div class="stats-header">
+                            <div class="stats-title">Si Si Coins</div>
+                            <div id="coins" class="total-coins">0.000000000</div>
                         </div>
-                        <div class="stat-item">
-                            <div class="stat-label">PER SECOND</div>
-                            <div class="stat-value"><span id="coinsPerSec">0</span></div>
+                        <div class="stats-grid">
+                            <div class="stat-item">
+                                <div class="stat-label">PER CLICK</div>
+                                <div class="stat-value"><span id="coinsPerClick">0</span></div>
+                            </div>
+                            <div class="stat-item">
+                                <div class="stat-label">PER SECOND</div>
+                                <div class="stat-value"><span id="coinsPerSec">0</span></div>
+                            </div>
                         </div>
                     </div>
+
+                    <button id="goto-images-btn" class="image-icon-btn">🎨</button>
                 </div>
-        
-                <button id="goto-images-btn" class="image-icon-btn">🎨</button>
-            </div>
-        </section>
+            </section>
  
 
             <section id="upgrade" class="page">
