--- a/index.html
+++ b/index.html
@@ -145,17 +145,18 @@
     </div>
 
 
-    <nav class="bottom-nav">
-        <button id="nav-upgrade" class="nav-btn"><span class="nav-icon">⚡️</span><span
-                class="nav-text">Upgrades</span></button>
-        <button id="nav-tasks" class="nav-btn"><span class="nav-icon">🎯</span><span
-                class="nav-text">Tasks</span></button>
-        <button id="nav-main" class="nav-btn active"><span class="nav-icon">🖱️</span><span
-                class="nav-text">Click</span></button>
-        <button id="nav-top" class="nav-btn"><span class="nav-icon">🏆</span><span class="nav-text">Top</span></button>
-        <button id="nav-transfer" class="nav-btn"><span class="nav-icon">💸</span><span
-                class="nav-text">Wallet</span></button>
-    </nav>
+<nav class="bottom-nav">
+    <button id="nav-upgrade" class="nav-btn"><span class="nav-icon">⚡️</span><span
+            class="nav-text">Upgrades</span></button>
+    <button id="nav-tasks" class="nav-btn"><span class="nav-icon">🎯</span><span class="nav-text">Tasks</span></button>
+    <button id="nav-main" class="nav-btn active"><span class="nav-icon">🖱️</span><span
+            class="nav-text">Click</span></button>
+    <button id="nav-images" class="nav-btn"><span class="nav-icon">🎨</span><span
+            class="nav-text">Images</span></button>
+    <button id="nav-top" class="nav-btn"><span class="nav-icon">🏆</span><span class="nav-text">Top</span></button>
+    <button id="nav-transfer" class="nav-btn"><span class="nav-icon">💸</span><span
+            class="nav-text">Wallet</span></button>
+</nav>
 
     <div id="notificationContainer"></div>
     <script src="script.js"></script>
