--- a/index.html
+++ b/index.html
@@ -43,8 +43,6 @@
                         </div>
                     </div>
                 </div>
-        
-                <button id="goto-images-btn" class="image-icon-btn">🎨</button>
             </div>
         </section>
  
@@ -149,10 +147,9 @@
     <button id="nav-upgrade" class="nav-btn"><span class="nav-icon">⚡️</span><span
             class="nav-text">Upgrades</span></button>
     <button id="nav-tasks" class="nav-btn"><span class="nav-icon">🎯</span><span class="nav-text">Tasks</span></button>
+        <button id="nav-images" class="nav-btn"><span class="nav-icon">🎨</span><span class="nav-text">Images</span></button>
     <button id="nav-main" class="nav-btn active"><span class="nav-icon">🖱️</span><span
             class="nav-text">Click</span></button>
-    <button id="nav-images" class="nav-btn"><span class="nav-icon">🎨</span><span
-            class="nav-text">Images</span></button>
     <button id="nav-top" class="nav-btn"><span class="nav-icon">🏆</span><span class="nav-text">Top</span></button>
     <button id="nav-transfer" class="nav-btn"><span class="nav-icon">💸</span><span
             class="nav-text">Wallet</span></button>
