--- a/index.html
+++ b/index.html
@@ -43,6 +43,9 @@
                         </div>
                     </div>
                 </div>
+                <div id="cps-display-container">
+                    <span id="cps-display">0 Clicks/Sec</span>
+                </div>
             </div>
         </section>
  
@@ -113,7 +116,7 @@
 
             
             <section id="transfer" class="page">
-                <h1 class="page-title">💸 Wallet</h1>
+                <h1 class="page-title">💸 Transaction</h1>
                 <div class="wallet-container">
                     <div class="transfer-form">
                         <h2 class="section-subtitle">Send Coins</h2>
